# AI-Agents

./: .gitignore  README.md  pyproject.toml
database-agent/: README.md  pyproject.toml
database-agent/db-agent/: agent.py  create-db.py  life_tracker.db  prompt.py  server.py
dev-research-agent/: README.md  app.py  main.py  run_app.py  simple-agent-with-mcp.py
dev-research-agent/.streamlit/: config.toml
dev-research-agent/src/: firecrawl.py  models.py  workflow.py
email-agent/: .env.example  README.md  langgraph.json  pyproject.toml
email-agent/src/gmail_assistant/: cron.py  graph.py  prompts.py  schemas.py  utils.py
email-agent/src/gmail_assistant/tools/: __init__.py  base.py  gmail_tools.py  run_ingest.py  setup_cron.py  setup_gmail.py
social-media-manager/: .env.example  README.md  __init__.py  langgraph.json  main.py  prompts.py  workflow.py
social-media-manager/schemas/: __init__.py  schemas.py
social-media-manager/tools/: __init__.py  extractor.py  update_tools.py
