[project]
name = "email-agent"
version = "0.1.0"
description = "Personal Gmail assistant using LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.9",
    "langchain-core>=0.3.59",
    "langchain-openai",
    "langgraph>=0.4.2",
    "langsmith[pytest]>=0.3.4",
    "langgraph-cli[inmem]",
    "google-api-python-client>=2.128.0",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "python-dotenv",
    "python-dateutil>=2.9.0.post0",
    "html2text>=2025.4.15",
    "langgraph-api>=0.2.120",
]
